# python-data-estructures-algorithms

./: Graphs.ipynb  List.ipynb  String.ipynb  algDesign.ipynb  alice.txt  class_example.py  dict_and_hash.ipynb  generators.py  inheritance.ipynb  listpointers.ipynb  pyproject.toml  search_algorithms.ipynb  selection.ipynb  sorting.ipynb  stack_queue.ipynb  tree.ipynb
